# logging-cpp

./: CMakeLists.txt  README.md
debian/: changelog
include/: logger.hpp
src/: example_logger.cpp  logger.cpp
